Fix desktop menu nav overflow; run format

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 hr {
-  @apply h-1 border-0 bg-slate-100 rounded-full
+  @apply h-1 border-0 bg-slate-100 rounded-full;
 }
